<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/select_level"
        android:textColor="#FF0000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutLevels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <Button
            android:id="@+id/btnLevel1"
            style="@style/MetalButton"
            android:text="@string/levelone" />

        <Button
            android:id="@+id/btnLevel2"
            style="@style/MetalButton"
            android:text="@string/leveltwo" />

        <Button
            android:id="@+id/btnLevel3"
            style="@style/MetalButton"
            android:text="@string/levelthree" />

        <Button
            android:id="@+id/btnLevel4"
            style="@style/MetalButton"
            android:text="@string/levelfour" />

        <Button
            android:id="@+id/btnLevel5"
            style="@style/MetalButton"
            android:text="@string/levelfive" />

        <Button
            android:id="@+id/btnLevel6"
            style="@style/MetalButton"
            android:text="@string/levelsix" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
