<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".MainActivity">



    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/bInicio"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/bInicio"
        android:textColor="#FF0000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPass" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_input"
        android:hint="@string/user"
        android:padding="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titulo" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/no_account"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bInicio" />

    <EditText
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/bg_input"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUser" />


</androidx.constraintlayout.widget.ConstraintLayout>
